--- a/test/test_funcs.ipynb
+++ b/test/test_funcs.ipynb
@@ -21,6 +21,50 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "['AnyStr',\n",
+       " 'Dict',\n",
+       " 'Optional',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'cropRaster',\n",
+       " 'merge_geotif_rio',\n",
+       " 'merge_geotif_vrt',\n",
+       " 'openRaster',\n",
+       " 'openVect',\n",
+       " 'stackLayer',\n",
+       " 'writeRaster_rio']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(raster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
